# Advancing-Volumes

./: .gitignore  ANSI_color_codes.h  CMakeLists.txt  LICENSE  README.md  advancing-batch.sh  advancing_batch.sh  advancing_commands.cpp  advancing_commands.h  advancing_data.cpp  advancing_data.h  advancing_front.cpp  advancing_front.h  advancing_io.cpp  advancing_io.h  advancing_rationals.cpp  advancing_rationals.h  advancing_topological.cpp  advancing_topological.h  advancing_utility.cpp  advancing_utility.h  advancing_volumes.cpp  advancing_volumes.h  append-lines.sh  log.txt  main.cpp  rationals.cpp  rationals.h  sphere.cpp  sphere.h  sphere.mesh  sphere_one.mesh  sphere_util.cpp  sphere_util.h  text_format.h  text_util.h  ui_tools.cpp  ui_tools.h  visualization.cpp  visualization.h
data/: airplane.mesh  angel1.mesh  angel2.mesh  angel3.mesh  ant.mesh  armadillo.mesh  bird.mesh  blade.mesh  bone.mesh  bumpy_sphere.mesh  bunny.mesh  buste.mesh  camile_hand.mesh  chamfer.mesh  cubespikes.mesh  dancer_children.mesh  devil.mesh  duck.mesh  fandisk.mesh  femur.mesh  foot.mesh  frog.mesh  hand.mesh  hand_olivier.mesh  homer.mesh  horse.mesh  kitten.mesh  kitty.mesh  memento.mesh  moai.mesh  mouse.mesh  octa_flower.mesh  ramses.mesh  sphinx.mesh  spider.mesh  table4.mesh  table4_2.mesh  table8.mesh
results/: airplane.mesh  angel1.mesh  angel2.mesh  angel3.mesh  ant.mesh  armadillo.mesh  armadillo_deformed.mesh  bimba.mesh  bird.mesh  blade.mesh  bone.mesh  bumpy_sphere.mesh  bunny.mesh  buste.mesh  camile_hand.mesh  cubespikes.mesh  david.mesh  dilo.mesh  dog.mesh  duck.mesh  fandisk.mesh  femur.mesh  foot.mesh  frog.mesh  gargoyle.mesh  gear.mesh  hand.mesh  hand_olivier.mesh  homer.mesh  horse.mesh  isidora_horse.mesh  lego.mesh  lion.mesh  log.txt  memento.mesh  moai.mesh  mouse.mesh  octa_flower.mesh  pig.mesh  ramses.mesh  (+6 more)
results/airplane/: line.txt
results/angel1/: line.txt
results/angel2/: line.txt
results/angel3/: line.txt
results/ant/: line.txt
results/armadillo/: line.txt
spheres/: sphere18.mesh  sphere31.mesh  sphere40.mesh  sphere50.mesh  sphere_coarse.mesh
(+43 files in other folders)
