cmake_minimum_required(VERSION 3.10)
project(Advancing-Volumes)
set(cinolib_DIR "/Users/federicomeloni/Documents/GitHub/cinolib")
set(CINOLIB_USES_OPENGL_GLFW_IMGUI ON)
set(CINOLIB_USES_SHEWCHUK_PREDICATES ON)
find_package(cinolib REQUIRED)
add_executable(${PROJECT_NAME} main.cpp sphere.h sphere.cpp text_format.h visualization.cpp visualization.h advancing_volumes.cpp advancing_volumes.h)
target_link_libraries(${CMAKE_PROJECT_NAME} cinolib)
